[package]
name = "BigInt-Rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
num-bigint = { version = "0.4.4", features = ["rand"] }
num-traits = "0.2"
num-primes = "0.2.0"

[profile.release]
lto = "fat"
codegen-units = 1

[build]
rustflags = ["-C", "target-cpu=native"]

